--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "purchase_request_app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "clean": "rimraf ./dist",
     "start": "npm run clean & webpack-dev-server --config ./webpack/webpack.config.dev.js",
@@ -13,13 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-router-dom": "^5.3.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
