--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "server": "json-server -w ./server/cities.json --port 3000",
+    "mock": "nodemon express.js",
     "clean": "rimraf ./dist",
     "start": "npm run clean & webpack-dev-server --config ./webpack/webpack.config.dev.js",
     "build": "npm run clean & webpack --config ./webpack/webpack.config.prod.js",
@@ -18,6 +19,9 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
     "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.0",
@@ -40,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
+    "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
