--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.0",
+    "react-imask": "^6.4.2",
     "react-router-dom": "^6.3.0",
     "typescript": "^4.6.4"
   },
