--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
     "nodemon": "^2.0.16",
